--- a/.github/workflows/build-and-tests.yml
+++ b/.github/workflows/build-and-tests.yml
@@ -26,3 +26,6 @@ jobs:
         echo "DEBUG:: BINDINGS CREATED AND SERVER IS BUILDING.."
         make build-server
         echo "DEBUG:: SERVER BUILT SUCCESSFULLY.."
+        cd ../embedded-client
+        make clean && make all
+        echo "DEBUG:: CLIENT BUILT SUCCESSFULLY.."
