--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,18 @@
 [submodule "thirdparty/libsocketcan"]
 	path = thirdparty/libsocketcan
 	url = https://github.com/linux-can/libsocketcan.git
+[submodule "thirdparty/cmsis-header-stm32"]
+	path = thirdparty/cmsis-header-stm32
+	url = https://github.com/modm-io/cmsis-header-stm32.git
+[submodule "thirdparty/CMSIS_5"]
+	path = thirdparty/CMSIS_5
+	url = https://github.com/ARM-software/CMSIS_5.git
+[submodule "thirdparty/FreeRTOS-Kernel"]
+	path = thirdparty/FreeRTOS-Kernel
+	url = https://github.com/FreeRTOS/FreeRTOS-Kernel.git
+[submodule "thirdparty/STM32F103X_HAL"]
+	path = thirdparty/STM32F103X_HAL
+	url = https://github.com/STMicroelectronics/stm32f1xx_hal_driver.git
+[submodule "thirdparty/custom_printf"]
+	path = thirdparty/custom_printf
+	url = https://github.com/mpaland/printf.git
