fully implemented but not tested

--- a/.github/workflows/build-and-tests.yml
+++ b/.github/workflows/build-and-tests.yml
@@ -27,5 +27,5 @@ jobs:
         make build-server
         echo "DEBUG:: SERVER BUILT SUCCESSFULLY.."
         cd ../embedded-client
-        make clean && make all
+        make all
         echo "DEBUG:: CLIENT BUILT SUCCESSFULLY.."
