--- a/embedded-client/Makefile
+++ b/embedded-client/Makefile
@@ -1,19 +1,18 @@
 IMAGE_NAME := dyshell
-WORKSPACE := /workspace/embedded-client
-THIRDPARTY := /workspace/thirdparty
-DOCKER_ARGS := --rm --net=host -v $(shell pwd)/..:/workspace -e WORKSPACE=$(WORKSPACE) -e THIRDPARTY=$(THIRDPARTY)
+WORKSPACE_PATH := /workspace
+EMBEDDED_PROJECT_PATH := $(WORKSPACE_PATH)/embedded-client
+THIRDPARTY_PATH := $(WORKSPACE_PATH)/thirdparty
+DOCKER_ARGS := --rm --net=host -v $(shell pwd)/..:$(WORKSPACE_PATH) -e WORKSPACE_PATH=$(WORKSPACE_PATH)
 
-.PHONY: all create-bindings build-server
+.PHONY: all build-client
 
+all: build-client
 
 build-docker:
 	docker build -t $(IMAGE_NAME) .
 
-all: build-docker
-	docker run $(DOCKER_ARGS) -t --entrypoint=/bin/bash $(IMAGE_NAME) -c "cd $(WORKSPACE) && ./build.sh"
+build-client:
+	docker run $(DOCKER_ARGS) -t --entrypoint=/bin/bash $(IMAGE_NAME) -c "cd $(EMBEDDED_PROJECT_PATH) && ./build.sh $(EMBEDDED_PROJECT_PATH) $(THIRDPARTY_PATH)"
 
-clean: build-docker
-	docker run $(DOCKER_ARGS) -t --entrypoint=/bin/bash $(IMAGE_NAME) -c "rm -rf $(THIRDPARTY)/libcspbuild $(WORKSPACE)/build"
-
-console: build-docker
+console:
 	docker run $(DOCKER_ARGS) -it --entrypoint=/bin/bash $(IMAGE_NAME)
