--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ target
 
 .vscode
 Cargo.lock
-artifacts/libcsp.a
-artifacts/bindings_libcsp.rs
-artifacts/libsocketcan.a
+rust-server/artifacts/libcsp.a
+rust-server/artifacts/bindings_libcsp.rs
+rust-server/artifacts/libsocketcan.a
 embedded-client/build
