csp client base project (#2)
* csp client base project

* csp integrated (not initialized)

* fully implemented but not tested

* build docker birs added

* readme updated

--- a/.github/workflows/build-and-tests.yml
+++ b/.github/workflows/build-and-tests.yml
@@ -22,7 +22,12 @@ jobs:
         git submodule update --init --recursive
         cd rust-server
         echo "DEBUG:: BINDINGS CREATING.."
+        make build-docker
         make create-bindings
         echo "DEBUG:: BINDINGS CREATED AND SERVER IS BUILDING.."
         make build-server
         echo "DEBUG:: SERVER BUILT SUCCESSFULLY.."
+        cd ../embedded-client
+        make build-docker
+        make all
+        echo "DEBUG:: CLIENT BUILT SUCCESSFULLY.."
